fixed cropping in the trunk - brought CSS over from deprecated a.css - it should be working now
git-svn-id: http://svn.apostrophenow.org/plugins/apostrophePlugin/trunk@2089 c89fab08-2f9b-42bf-8176-bd3ad6bee547

--- a/web/css/a-buttons.css
+++ b/web/css/a-buttons.css
@@ -135,6 +135,7 @@ box-shadow: 0 0 0 transparent !important;
 .a-calendar > .icon { background-image: url(/apostrophePlugin/images/a-icon-event.png); }
 .a-cancel > .icon { background-image: url(/apostrophePlugin/images/a-icon-cancel.png); }
 .a-checked > .icon { background-image: url(/apostrophePlugin/images/a-icon-checked.png); }
+.a-crop > .icon { background-image: url(/apostrophePlugin/images/a-icon-crop.png); }
 .a-delete > .icon { background-image: url(/apostrophePlugin/images/a-icon-alt-trash.png); }
 .a-download > .icon { background-image: url(/apostrophePlugin/images/a-icon-download.png); }
 .a-drag > .icon { background-image: url(/apostrophePlugin/images/a-icon-drag-simple.png); }
